--- a/public/edge_collections_style.css
+++ b/public/edge_collections_style.css
@@ -3,7 +3,7 @@
     padding: 5px;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-
+    background-color: rgb(194, 212, 245);
 }
 h2 {
     text-align: center;
@@ -12,4 +12,26 @@ h2 {
     font-size: 40px;
     font-weight: 600;
     color: rgb(10, 40, 20);
+}
+h1{
+    text-align: center;
+    margin: 20px;
+    padding: 10px;
+    font-size: 40px;
+    font-weight: 600;
+    color: rgb(10, 80, 10);
+}
+a{
+    text-decoration: none;
+    color: rgb(30, 30, 40);
+    font-size: 20px;
+    font-weight: 300;
+    padding: 5px;
+    margin: 5px;
+    border-radius: 5px;
+    background-color: rgb(255, 255, 255);
+    border: 1px solid rgb(30, 30, 40);
+    transition: 1s;
+    text-align: right;
+
 }
